# chain_store

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
src/chain_store/: admin.py  apps.py  filters.py  models.py  urls.py
src/chain_store/migrations/: 0001_initial.py  0002_store_level_alter_store_debt.py  0003_contact_remove_product_store_and_more.py  0004_alter_store_products.py  0005_alter_store_contact.py
src/chain_store/serializers/: contact.py  product.py  provider.py
src/chain_store/views/: contact.py  product.py  provider.py
src/electronics/: settings.py  urls.py
src/employees/: admin.py  models.py  serializers.py  urls.py  views.py
src/employees/migrations/: 0001_initial.py
src/project/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/: conftest.py  factories.py  fixtures.py
src/tests/provider_tests/: api_tests.py
